# surface_PDEs

./: LICENSE  README.md
DROPS_highquad/: cbmaker.sh  debug.m  makebin.sh  run.sh  run_e.sh  run_eig.sh  run_eigfun.sh  svrun.sh
DROPS_highquad/param/surfphasesep/: No_Bnd_Condition_ch.json
DROPS_highquad/src/geom/: builder.cpp  csg.cpp  csg.h  deformation.cpp  deformation.h  geomselect.cpp  locator.cpp  locator.h  maketopo_helper.cpp  multigrid.cpp  multigrid.h  principallattice.cpp  principallattice.h  reftetracut.cpp  reftetracut.h  simplex.cpp  simplex.h  subtriangulation.cpp  subtriangulation.h  topo.cpp
DROPS_highquad/src/levelset/: brick_transp.cpp  coupling.cpp  coupling.h  fastmarch.cpp  filmCoeff.cpp  levelset.cpp  levelsetmapper.cpp  levelsetmapper.h  lsshear.cpp  marking_strategy.cpp  marking_strategy.h  prJump.cpp  surfacetension.cpp  surfacetension.h  twophaseCoeff.cpp  twophasedrops.cpp  volume_adjustment.cpp  volume_adjustment.h
DROPS_highquad/src/misc/: base64.cpp  base64.h  csgFunctions.cpp  dynamicload.cpp  params.cpp  problem.cpp  problem.h  progressaccu.cpp  progressaccu.h  scopetimer.cpp  scopetimer.h  utils.h
DROPS_highquad/src/navstokes/: insadrops.cpp  insdrops.cpp  instatnavstokes2phase.cpp  nsdrops.cpp  nsdrops_begehung.cpp
DROPS_highquad/src/surfactant/: CMakeLists.txt  eigenvalue_problems.cpp  eigfun.cpp  femP3.cpp  femP3.h  ifacetransp.cpp  ifacetransp.h  sfpde.cpp  sfpde.h  surfacestokes.cpp  surfactant.cpp  surfactantxyz.json  test_direct_solver.h  test_tmp.cpp
MATLAB/: Eig_Clu2eig_cal.m  collection.m  eig_cluster.m  eig_cluster2.m  fig_beauty.m  singgep.m  singgep_modified.m  singgeps.m  test_ISO.m  test_cal_eigvalues_rcp.m  test_cal_error.m  test_convergence_rate_plot.m  test_eig_try.m  test_eigvlues_distributions.m  test_find_eig_rcp.m  test_find_eigs.m  test_find_eigs_large.m  test_find_eigs_stb.m  test_fix_zero_eigenvalues.m  test_left_right_eigenvalues.m  test_singgep.m
MATLAB/ISO_k1N128/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt  log.txt
MATLAB/ISO_k1N16/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k1N32/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k1N32_Stb/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  S.txt  log.txt
MATLAB/ISO_k1N4/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k1N64/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt  log.txt
MATLAB/ISO_k1N8/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k2N128/: Copy_of_eig_cal.txt  Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt  log.txt  tmp_appro_2.mat
MATLAB/ISO_k2N16/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k2N32/: Eig_Clu.csv  Eig_Clu.mat  Eig_Clu_origin.mat  eig_cal.txt  eig_cal_modified.txt  log.txt
MATLAB/ISO_k2N4/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/ISO_k2N64/: Copy_of_eig_cal.txt  Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt  log.txt
MATLAB/ISO_k2N8/: A.txt  Eig_Clu.csv  Eig_Clu.mat  Eig_Clu_origin.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k1N128/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/NISO_k1N16/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k1N32/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k1N4/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k1N64/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k1N8/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k2N128/: Copy_of_eig_cal.txt  Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt  log.txt
MATLAB/NISO_k2N16/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  log.txt
MATLAB/NISO_k2N32/: Copy_of_eig_cal.txt  Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/NISO_k2N4/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  eig_vec.txt  log.txt
MATLAB/NISO_k2N64/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/NISO_k2N8/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  eig_cal.txt  eig_vec.txt  log.txt
MATLAB/ngsxfem_stb_k2N128/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/ngsxfem_stb_k2N16/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  S.txt  eig_cal.txt
MATLAB/ngsxfem_stb_k2N32/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/ngsxfem_stb_k2N64/: Eig_Clu.csv  Eig_Clu.mat  eig_cal.txt
MATLAB/ngsxfem_stb_k2N8/: A.txt  Eig_Clu.csv  Eig_Clu.mat  M.txt  S.txt  eig_cal.txt
PYTHON/: eig.py
(+92 files in other folders)
